Carregando os dados necessários

--- a/h8_ticket_medio/h8_analise.ipynb
+++ b/h8_ticket_medio/h8_analise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carregando os dados"
+    "Carregando os dados necessários"
    ]
   },
   {
@@ -35,7 +35,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   }
  ],
  "metadata": {
