Adicionando arquivo com datas especiais e prosseguindo no tratamento de dados

--- a/h8_ticket_medio/h8_analise.ipynb
+++ b/h8_ticket_medio/h8_analise.ipynb
@@ -9,9 +9,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>data</th>\n",
+       "      <th>data_pagamento</th>\n",
+       "      <th>data_cancelamento</th>\n",
+       "      <th>numero_pedido</th>\n",
+       "      <th>status</th>\n",
+       "      <th>pagamento</th>\n",
+       "      <th>produto</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>...</th>\n",
+       "      <th>entrega_cidade</th>\n",
+       "      <th>entrega_estado</th>\n",
+       "      <th>entrega_cep</th>\n",
+       "      <th>utm_source</th>\n",
+       "      <th>utm_campaign</th>\n",
+       "      <th>utm_medium</th>\n",
+       "      <th>utm_content</th>\n",
+       "      <th>utm_term</th>\n",
+       "      <th>customizacao</th>\n",
+       "      <th>id_cliente</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>117569438</td>\n",
+       "      <td>04/08/2024 18:26:40</td>\n",
+       "      <td>04/08/2024 18:27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1042552530523300</td>\n",
+       "      <td>Pagamento aprovado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRACELETE AJUSTÁVEL O COM COROA</td>\n",
+       "      <td>DFREFSP8P</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Brasilia</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>72455490</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31d69aed10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>117385907</td>\n",
+       "      <td>01/08/2024 19:08:02</td>\n",
+       "      <td>01/08/2024 19:11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1042552893870166</td>\n",
+       "      <td>Pagamento aprovado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRACELETE AJUSTÁVEL O COM COROA</td>\n",
+       "      <td>DFREFSP8P</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Varzea Nova(Santa Rita)</td>\n",
+       "      <td>Paraiba</td>\n",
+       "      <td>58304500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3e109eedd5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>117385794</td>\n",
+       "      <td>01/08/2024 19:05:53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/08/2024 19:12</td>\n",
+       "      <td>1042552190094688</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRACELETE AJUSTÁVEL O COM COROA</td>\n",
+       "      <td>DFREFSP8P</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Varzea Nova(Santa Rita)</td>\n",
+       "      <td>Paraiba</td>\n",
+       "      <td>58304500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3e109eedd5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>117382873</td>\n",
+       "      <td>01/08/2024 18:12:14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/08/2024 19:13</td>\n",
+       "      <td>1042552273445602</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRACELETE AJUSTÁVEL O COM COROA</td>\n",
+       "      <td>DFREFSP8P</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Varzea Nova(Santa Rita)</td>\n",
+       "      <td>Paraiba</td>\n",
+       "      <td>58304500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3e109eedd5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>117382771</td>\n",
+       "      <td>01/08/2024 18:09:41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/08/2024 19:13</td>\n",
+       "      <td>1042552782939597</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRACELETE AJUSTÁVEL O COM COROA</td>\n",
+       "      <td>DFREFSP8P</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Varzea Nova(Santa Rita)</td>\n",
+       "      <td>Paraiba</td>\n",
+       "      <td>58304500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3e109eedd5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>141</td>\n",
+       "      <td>112676891</td>\n",
+       "      <td>22/05/2024 13:22:56</td>\n",
+       "      <td>22/05/2024 13:22</td>\n",
+       "      <td>22/05/2024 13:27</td>\n",
+       "      <td>1042552727006222</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Cartão de crédito</td>\n",
+       "      <td>Teste</td>\n",
+       "      <td>4P8E3PJHB</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Florianopolis</td>\n",
+       "      <td>Santa Catarina</td>\n",
+       "      <td>88058000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0db3cf4f27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>142</td>\n",
+       "      <td>112676767</td>\n",
+       "      <td>22/05/2024 13:21:14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22/05/2024 15:01</td>\n",
+       "      <td>1042552431219898</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>Teste</td>\n",
+       "      <td>4P8E3PJHB</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Florianopolis</td>\n",
+       "      <td>Santa Catarina</td>\n",
+       "      <td>88058000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0db3cf4f27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>143</td>\n",
+       "      <td>112675088</td>\n",
+       "      <td>22/05/2024 12:54:55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22/05/2024 14:45</td>\n",
+       "      <td>1042552609058447</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRINCO ARGOLA SOL E LUA</td>\n",
+       "      <td>JRM3YWN95</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Florianopolis</td>\n",
+       "      <td>Santa Catarina</td>\n",
+       "      <td>88058000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0db3cf4f27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>144</td>\n",
+       "      <td>112670127</td>\n",
+       "      <td>22/05/2024 11:37:57</td>\n",
+       "      <td>22/05/2024 11:37</td>\n",
+       "      <td>22/05/2024 11:47</td>\n",
+       "      <td>1042552577521467</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Cartão de crédito</td>\n",
+       "      <td>Teste</td>\n",
+       "      <td>JMPBRU537</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Florianopolis</td>\n",
+       "      <td>Santa Catarina</td>\n",
+       "      <td>88058000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0db3cf4f27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>145</td>\n",
+       "      <td>112669238</td>\n",
+       "      <td>22/05/2024 11:23:14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28/05/2024 17:09</td>\n",
+       "      <td>1042552155461445</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>Pix</td>\n",
+       "      <td>BRINCO ARGOLA SOL E LUA</td>\n",
+       "      <td>JRM3YWN95</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Florianopolis</td>\n",
+       "      <td>Santa Catarina</td>\n",
+       "      <td>88058000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0db3cf4f27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>145 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0         id                 data    data_pagamento  \\\n",
+       "0             1  117569438  04/08/2024 18:26:40  04/08/2024 18:27   \n",
+       "1             2  117385907  01/08/2024 19:08:02  01/08/2024 19:11   \n",
+       "2             3  117385794  01/08/2024 19:05:53               NaN   \n",
+       "3             4  117382873  01/08/2024 18:12:14               NaN   \n",
+       "4             5  117382771  01/08/2024 18:09:41               NaN   \n",
+       "..          ...        ...                  ...               ...   \n",
+       "140         141  112676891  22/05/2024 13:22:56  22/05/2024 13:22   \n",
+       "141         142  112676767  22/05/2024 13:21:14               NaN   \n",
+       "142         143  112675088  22/05/2024 12:54:55               NaN   \n",
+       "143         144  112670127  22/05/2024 11:37:57  22/05/2024 11:37   \n",
+       "144         145  112669238  22/05/2024 11:23:14               NaN   \n",
+       "\n",
+       "    data_cancelamento     numero_pedido              status  \\\n",
+       "0                 NaN  1042552530523300  Pagamento aprovado   \n",
+       "1                 NaN  1042552893870166  Pagamento aprovado   \n",
+       "2    01/08/2024 19:12  1042552190094688           Cancelado   \n",
+       "3    01/08/2024 19:13  1042552273445602           Cancelado   \n",
+       "4    01/08/2024 19:13  1042552782939597           Cancelado   \n",
+       "..                ...               ...                 ...   \n",
+       "140  22/05/2024 13:27  1042552727006222           Cancelado   \n",
+       "141  22/05/2024 15:01  1042552431219898           Cancelado   \n",
+       "142  22/05/2024 14:45  1042552609058447           Cancelado   \n",
+       "143  22/05/2024 11:47  1042552577521467           Cancelado   \n",
+       "144  28/05/2024 17:09  1042552155461445           Cancelado   \n",
+       "\n",
+       "             pagamento                          produto        sku  ...  \\\n",
+       "0                  Pix  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P  ...   \n",
+       "1                  Pix  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P  ...   \n",
+       "2                  Pix  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P  ...   \n",
+       "3                  Pix  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P  ...   \n",
+       "4                  Pix  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P  ...   \n",
+       "..                 ...                              ...        ...  ...   \n",
+       "140  Cartão de crédito                            Teste  4P8E3PJHB  ...   \n",
+       "141                Pix                            Teste  4P8E3PJHB  ...   \n",
+       "142                Pix          BRINCO ARGOLA SOL E LUA  JRM3YWN95  ...   \n",
+       "143  Cartão de crédito                            Teste  JMPBRU537  ...   \n",
+       "144                Pix          BRINCO ARGOLA SOL E LUA  JRM3YWN95  ...   \n",
+       "\n",
+       "              entrega_cidade    entrega_estado entrega_cep utm_source  \\\n",
+       "0                   Brasilia  Distrito Federal    72455490        NaN   \n",
+       "1    Varzea Nova(Santa Rita)           Paraiba    58304500        NaN   \n",
+       "2    Varzea Nova(Santa Rita)           Paraiba    58304500        NaN   \n",
+       "3    Varzea Nova(Santa Rita)           Paraiba    58304500        NaN   \n",
+       "4    Varzea Nova(Santa Rita)           Paraiba    58304500        NaN   \n",
+       "..                       ...               ...         ...        ...   \n",
+       "140            Florianopolis    Santa Catarina    88058000        NaN   \n",
+       "141            Florianopolis    Santa Catarina    88058000        NaN   \n",
+       "142            Florianopolis    Santa Catarina    88058000        NaN   \n",
+       "143            Florianopolis    Santa Catarina    88058000        NaN   \n",
+       "144            Florianopolis    Santa Catarina    88058000        NaN   \n",
+       "\n",
+       "     utm_campaign  utm_medium  utm_content utm_term customizacao  id_cliente  \n",
+       "0             NaN         NaN          NaN      NaN          NaN  31d69aed10  \n",
+       "1             NaN         NaN          NaN      NaN          NaN  3e109eedd5  \n",
+       "2             NaN         NaN          NaN      NaN          NaN  3e109eedd5  \n",
+       "3             NaN         NaN          NaN      NaN          NaN  3e109eedd5  \n",
+       "4             NaN         NaN          NaN      NaN          NaN  3e109eedd5  \n",
+       "..            ...         ...          ...      ...          ...         ...  \n",
+       "140           NaN         NaN          NaN      NaN          NaN  0db3cf4f27  \n",
+       "141           NaN         NaN          NaN      NaN          NaN  0db3cf4f27  \n",
+       "142           NaN         NaN          NaN      NaN          NaN  0db3cf4f27  \n",
+       "143           NaN         NaN          NaN      NaN          NaN  0db3cf4f27  \n",
+       "144           NaN         NaN          NaN      NaN          NaN  0db3cf4f27  \n",
+       "\n",
+       "[145 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pandas import DataFrame, read_csv, to_datetime\n",
     "from os import path\n",
@@ -32,40 +420,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 145 entries, 0 to 144\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column      Non-Null Count  Dtype         \n",
-      "---  ------      --------------  -----         \n",
-      " 0   id_cliente  145 non-null    object        \n",
-      " 1   total_pago  145 non-null    float64       \n",
-      " 2   data        145 non-null    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), float64(1), object(1)\n",
-      "memory usage: 3.5+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Timestamp('2024-08-04 18:26:40')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Do dataframe 'df_pedidos' Iremos pegar a coluna 'total_pago' e a coluna 'id_cliente', assim teremos o valor total pago por cliente, além da data.\n",
-    "\n",
     "# A ideia é dividir em dois grupos, o ticket médio dos clientes em datas normais, e em datas especiais.\n",
     "\n",
-    "\n",
     "# Trocando as ',' por '.' para converter para float na coluna 'total_pago'\n",
-    "df_pedidos['total_pago'] = df_pedidos['total_pago'].replace(',', '.', regex=True).astype({'total_pago': float})\n",
+    "df_pedidos['total_pago'] = (df_pedidos['total_pago']\n",
+    " .replace(',', '.', regex=True)\n",
+    " .astype({'total_pago': float}))\n",
     "\n",
     "# Trocando o tipo da coluna 'data' para datetime (formato do pandas para datas)\n",
     "df_pedidos['data'] = to_datetime(df_pedidos['data'], format='%d/%m/%Y %H:%M:%S')\n",
     "\n",
     "# Filtrando apenas as colunas necessárias do dataframe 'df_pedidos'\n",
-    "df_pedidos.filter(['id_cliente', 'total_pago', 'data']).info()"
+    "df_pedidos = df_pedidos.filter(['id_cliente', 'total_pago', 'data'])\n",
+    "\n",
+    "# Separando as compras feitas em datas especiais e datas normais\n",
+    "## Vamos criar a lista com as datas especiais\n",
+    "datas_especiais = to_datetime([\n",
+    "    '2024/01/01', '2024/01/06', '2024/01/25', '2024/02/10', '2024/02/11', \n",
+    "    '2024/02/12', '2024/02/13', '2024/02/14', '2024/02/24', '2024/03/08', \n",
+    "    '2024/03/10', '2024/03/19', '2024/03/29', '2024/04/01', '2024/04/21', \n",
+    "    '2024/04/22', '2024/04/25', '2024/04/30', '2024/05/01', '2024/05/13', \n",
+    "    '2024/05/31', '2024/06/05', '2024/06/12', '2024/06/24', '2024/07/02', \n",
+    "    '2024/07/09', '2024/07/20', '2024/08/11', '2024/08/15', '2024/08/19', \n",
+    "    '2024/09/07', '2024/09/29', '2024/10/12', '2024/10/15', '2024/10/28', \n",
+    "    '2024/11/02', '2024/11/15', '2024/11/20', '2024/12/24', '2024/12/25', '2024/12/31'], \n",
+    "    format='%Y/%m/%d')\n",
+    "\n",
+    "## Agora criaremos outro dataframe apenas com as datas_especiais\n"
    ]
   }
  ],
